--- a/03.socket-io/package.json
+++ b/03.socket-io/package.json
@@ -2,11 +2,22 @@
   "name": "03.socket-io",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "morgan": "^1.10.0",
+    "nanobuffer": "^3.0.0",
+    "serve-handler": "^6.1.5",
+    "socket.io": "^4.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
